crates/full-node/full-node-configs/src/snapshots/sov_full_node_configs__runner__tests__correct_config.snap
---
source: crates/full-node/full-node-configs/src/runner.rs
assertion_line: 257
expression: config
---
{
  "storage": {
    "path": "/tmp",
    "ledger_db_path": null,
    "state_cache_size": null,
    "user_commit_concurrency": null,
    "user_hashtable_buckets": null,
    "user_preallocate_ht": null,
    "user_page_cache_size": null,
    "user_leaf_cache_size": null,
    "user_page_cache_upper_levels": null,
    "kernel_commit_concurrency": null,
    "kernel_hashtable_buckets": null,
    "kernel_preallocate_ht": null,
    "kernel_page_cache_size": null,
    "kernel_leaf_cache_size": null,
    "kernel_page_cache_upper_levels": null,
    "pruner_block_interval": null,
    "pruner_versions_to_keep": null,
    "pruner_max_batch_size": null
  },
  "runner": {
    "da_polling_interval_ms": 10000,
    "http_config": {
      "bind_host": "127.0.0.1",
      "bind_port": 12346,
      "public_address": "https://rollup.sovereign.xyz",
      "cors": "restrictive"
    },
    "concurrent_sync_tasks": 18,
    "pre_fetched_blocks_capacity": 20,
    "save_tx_bodies": false
  },
  "da": {
    "connection_string": "sqlite:///tmp/mockda.sqlite?mode=rwc",
    "sender_address": "0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f",
    "finalization_blocks": 0,
    "block_producing": {
      "periodic": {
        "block_time_ms": 1000
      }
    },
    "randomization": null,
    "failure_behavior": "none"
  },
  "proof_manager": {
    "aggregated_proof_block_jump": 22,
    "prover_address": "sov1lzkjgdaz08su3yevqu6ceywufl35se9f33kztu5cu2spja5hyyf",
    "max_number_of_transitions_in_db": 1000,
    "max_number_of_transitions_in_memory": 100,
    "eager_proof_submission": true,
    "prover_thread_count_override": null,
    "max_number_of_aggregated_proofs_in_memory": 5,
    "max_concurrent_proof_blobs": 16
  },
  "sequencer": {
    "automatic_batch_production": true,
    "max_allowed_node_distance_behind": 5,
    "dropped_tx_ttl_secs": 60,
    "rollup_address": "sov1lzkjgdaz08su3yevqu6ceywufl35se9f33kztu5cu2spja5hyyf",
    "admin_addresses": [],
    "standard": {
      "mempool_max_txs_count": null,
      "max_batch_size_bytes": null
    },
    "max_batch_size_bytes": 1048576,
    "max_concurrent_batch_blobs": 16,
    "blob_processing_timeout_secs": 60,
    "extension": null
  },
  "monitoring": {
    "telegraf_address": "udp://192.168.4.5:8543",
    "max_datagram_size": 1024,
    "max_pending_metrics": 2560,
    "tokio_runtime_metrics_interval_millis": 500
  }
}
