crates/full-node/full-node-configs/src/snapshots/sov_full_node_configs__runner__tests__correct_config_with_rate_limiter.snap
---
source: crates/full-node/full-node-configs/src/runner.rs
expression: config
---
{
  "storage": {
    "path": "/tmp",
    "ledger_db_path": null,
    "state_cache_size": null,
    "user_commit_concurrency": null,
    "user_hashtable_buckets": null,
    "user_preallocate_ht": null,
    "user_page_cache_size": null,
    "user_leaf_cache_size": null,
    "user_page_cache_upper_levels": null,
    "kernel_commit_concurrency": null,
    "kernel_hashtable_buckets": null,
    "kernel_preallocate_ht": null,
    "kernel_page_cache_size": null,
    "kernel_leaf_cache_size": null,
    "kernel_page_cache_upper_levels": null,
    "pruner": "off"
  },
  "runner": {
    "da_polling_interval_ms": 10000,
    "http_config": {
      "bind_host": "127.0.0.1",
      "bind_port": 12346,
      "public_address": "https://rollup.sovereign.xyz",
      "cors": "restrictive"
    },
    "concurrent_sync_tasks": 18,
    "pre_fetched_blocks_capacity": 20,
    "save_tx_bodies": false
  },
  "da": {
    "connection_string": "sqlite:///tmp/mockda.sqlite?mode=rwc",
    "sender_address": "0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f",
    "finalization_blocks": 0,
    "block_producing": {
      "periodic": {
        "block_time_ms": 1000
      }
    },
    "randomization": null,
    "failure_behavior": "none"
  },
  "proof_manager": {
    "aggregated_proof_block_jump": 22,
    "prover_address": "sov1lzkjgdaz08su3yevqu6ceywufl35se9f33kztu5cu2spja5hyyf",
    "max_number_of_transitions_in_db": 1000,
    "max_number_of_transitions_in_memory": 100,
    "eager_proof_submission": true,
    "prover_thread_count_override": null,
    "max_number_of_aggregated_proofs_in_memory": 5,
    "max_concurrent_proof_blobs": 16
  },
  "sequencer": {
    "automatic_batch_production": true,
    "max_allowed_node_distance_behind": 5,
    "dropped_tx_ttl_secs": 60,
    "rollup_address": "sov1lzkjgdaz08su3yevqu6ceywufl35se9f33kztu5cu2spja5hyyf",
    "admin_addresses": [],
    "preferred": {
      "minimum_profit_per_tx": 0,
      "events_channel_size": 10000,
      "postgres_config": {
        "postgres_connection_string": "postgresql://postgres:pass@localhost:5432/db",
        "node_id": "node_1",
        "node_role": "Leader",
        "leader_election": {
          "leader_timeout_millis": 500,
          "grace_period_millis": 10000,
          "heartbeat_interval_millis": 100
        }
      },
      "disable_state_root_consistency_checks": true,
      "ideal_lag_behind_finalized_slot": 3,
      "db_event_channel_size": 10000,
      "recovery_strategy": "TryToSave",
      "batch_execution_time_limit_millis": 2000,
      "num_cache_warmup_workers": 0,
      "rate_limiter": {
        "max_nb_of_concurrent_users_in_rate_limiter": 100000,
        "max_requests_per_second": 1000000,
        "default_limits": {
          "resources_per_bucket": 5,
          "refill_rate": 2
        },
        "address_custom_limits": [
          [
            "sov1lzkjgdaz08su3yevqu6ceywufl35se9f33kztu5cu2spja5hyyf",
            {
              "resources_per_bucket": 10,
              "refill_rate": 2
            }
          ]
        ],
        "ip_custom_limits": [
          [
            "157.180.14.244/32",
            {
              "resources_per_bucket": 10,
              "refill_rate": 2
            }
          ],
          [
            "157.180.34.249/32",
            {
              "resources_per_bucket": 8,
              "refill_rate": 2
            }
          ]
        ]
      },
      "maximum_future_nonce_delta": 100,
      "future_nonce_transaction_timeout_millis": 2000
    },
    "max_batch_size_bytes": 1048576,
    "max_concurrent_batch_blobs": 16,
    "blob_processing_timeout_secs": 60,
    "extension": null
  },
  "monitoring": {
    "telegraf_address": "udp://192.168.4.5:8543",
    "max_datagram_size": 1024,
    "max_pending_metrics": 2560,
    "tokio_runtime_metrics_interval_millis": 500
  }
}
